# AdventOfCode

2023/day1/src/: main.rs
2023/day10a/src/: main.rs
2023/day10b/src/: main.rs
2023/day11a/src/: main.rs
2023/day11b/src/: main.rs
2023/day12a/src/: main.rs
2023/day12b/src/: main.rs
2023/day12b_old/src/: main.rs
2023/day13a/src/: main.rs
2023/day13b/src/: main.rs
2023/day14a/src/: main.rs
2023/day14b/src/: main.rs
2023/day15a/src/: main.rs
2023/day15b/day15b/: Cargo.toml
2023/day15b/src/: main.rs
2023/day16a/src/: main.rs
2023/day16b/src/: main.rs
2023/day17a/src/: main.rs
2023/day17b/src/: main.rs
2023/day18a/src/: main.rs
2023/day18b/src/: main.rs
2023/day19a/src/: main.rs
2023/day19b/: Cargo.toml
2023/day19b/src/: main.rs
2023/day1a/: result
2023/day1b/src/: main.rs  trie.rs
2023/day1b_old/src/: main.rs
2023/day20a/src/: main.rs
2023/day20b/: Cargo.toml
2023/day20b/src/: main.rs
2023/day21a/src/: main.rs
2023/day21b/: Cargo.toml
2023/day21b/src/: main.rs
2023/day22a/src/: main.rs
2023/day22b/: Cargo.toml
2023/day22b/src/: main.rs
2023/day23a/: Cargo.toml
2023/day23a/src/: main.rs
2023/day23b/src/: main.rs
2023/day2a/: Cargo.toml
2023/day2a/src/: main.rs
2023/day2b/: Cargo.toml
2023/day2b/src/: main.rs
2023/day3b/: Cargo.toml
2023/day4a/: Cargo.toml
2023/day4b/: Cargo.toml
2023/day5a/: Cargo.toml
2023/day5b/: Cargo.toml
2023/day6a/: Cargo.toml
2023/day6b/: Cargo.toml
2023/day7a/: Cargo.toml
2023/day7b/: Cargo.toml
2023/day8a_opt/: Cargo.toml
2023/day8b/: Cargo.toml
(+19 files in other folders)
