[package]
name = "day9a"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
arr_macro = "0.2.1"
clap = { version = "4.4.10", features = ["derive"] }
iter_tools = "0.4.0"
regex = "1.10.2"
strum = { version = "0.25.0", features = ["derive"] }
vec2d = "0.4.0"
